--- a/Front-end/reactjs-app/package.json
+++ b/Front-end/reactjs-app/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "material-ui": "^0.20.2",
+    "material-ui": "^0.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.4",
     "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
