--- a/Front-end/reactjs-app/package.json
+++ b/Front-end/reactjs-app/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "session-storage": "^1.0.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
