--- a/Front-end/reactjs-app/package.json
+++ b/Front-end/reactjs-app/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "react-toastify": "^7.0.4",
     "recharts": "^2.0.9",
     "session-storage": "^1.0.1",
     "universal-cookie": "^4.0.4",
