--- a/Front-end/reactjs-app/package.json
+++ b/Front-end/reactjs-app/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^0.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-localization": "^1.0.17",
     "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
