--- a/Front-end/reactjs-app/.env
+++ b/Front-end/reactjs-app/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_SERVER_DOMAIN='http://localhost:8080'
+REACT_APP_API_SERVER_DOMAIN='http://walletapiapp-env.eba-npku5mfu.us-east-2.elasticbeanstalk.com/'
