--- a/Front-end/reactjs-app/.env.development
+++ b/Front-end/reactjs-app/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_API_SERVER_DOMAIN='http://legianha.42web.io'
+REACT_APP_API_SERVER_DOMAIN='http://walletapiapp-env.eba-npku5mfu.us-east-2.elasticbeanstalk.com/'
